Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
/arrow/cpp/src/arrow/scalar.h:137:64: warning: ‘*((void*)& iso_calendar +8)’ may be used uninitialized in this function [-Wmaybe-uninitialized] 137 | : PrimitiveScalarBase(std::move(type), true), value(value) {} | ^ In file included from /tmp/RtmpoS4YCn/file8773f4430f/src/arrow/CMakeFiles/arrow_objlib.dir/Unity/unity_17_cxx.cxx:7: /arrow/cpp/src/arrow/compute/kernels/scalar_temporal.cc:697:30: note: ‘*((void*)& iso_calendar +8)’ was declared here 697 | std::array<int64_t, 3> iso_calendar;
fyi rokm
Attachments
Issue Links
- is duplicated by
-
ARROW-13960 [C++] Fix use of non-const references in temporal kernels
-
- Closed
-
- links to