ARROW-13961: [C++] Fix use of non-const references, declaration without initialization

Fix some style errors/warnings that came up in ARROW-13138.

Closes #11121 from lidavidm/arrow-13961

Authored-by: David Li <li.davidm96@gmail.com>
Signed-off-by: David Li <li.davidm96@gmail.com>